--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@glidejs/glide": "^3.6.2",
     "antd": "^5.20.6",
     "axios": "^1.7.7",
-    "next": "14.2.11",
+    "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
